我都车辆、我都发布、个人认证页面编写完成

--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
     "name" : "xuan_wa_bao",
     "appid" : "",
-    "description" : "多平台快速开发的UI框架",
+    "description" : "旋挖钻寄交易/置换/咨询/维修",
     "versionName" : "1.8.4",
     "versionCode" : "100",
     "transformPx" : false,
